Fix jumping tabs

--- a/my-app/src/Components/Marketplace/Marketplace.css
+++ b/my-app/src/Components/Marketplace/Marketplace.css
@@ -4,7 +4,7 @@
 .Marketplace{
     height:100%;
     width:80%;
-    display:flex;
+    
     justify-content:center;
     flex-wrap: wrap;
     background: #1b2026;
